Fixed whitespace issue on map carousel fixes #1123

--- a/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_map.scss
+++ b/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_map.scss
@@ -107,6 +107,10 @@
     padding: 0;
     vertical-align: top;
     white-space: nowrap;
+
+    * {
+        white-space: normal;
+    }
 }
 
 .map-list-item {
